<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/list_item_horizontal_margin"
    android:layout_marginTop="@dimen/list_item_vertical_margin"
    android:layout_marginEnd="@dimen/list_item_horizontal_margin"
    android:layout_marginBottom="@dimen/list_item_vertical_margin">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:cardElevation="1dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/item_text"
        style="@style/BaseAppCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/list_item_article_title_text_size"
                android:textAlignment="textStart"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_story_right"
                app:layout_constraintBottom_toTopOf="@id/item_url"
                tools:text="Show HN: This is the title with two lines of text"/>

            <TextView
                android:id="@+id/item_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textStyle="italic"
                android:textSize="@dimen/list_item_article_url_text_size"
                android:maxLines="1"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintTop_toBottomOf="@id/item_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_story_right"
                app:layout_constraintBottom_toTopOf="@id/item_user"
                tools:text="news.ycombinator.com"/>

            <TextView
                android:id="@+id/item_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textSize="@dimen/list_item_article_user_text_size"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/item_url"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="username"/>

            <TextView
                android:id="@+id/item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_item_article_user_text_size"
                android:textAlignment="textEnd"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/item_url"
                app:layout_constraintEnd_toStartOf="@id/guideline_story_right"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="1 d"/>


            <View
                android:id="@+id/item_divider"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:background="@color/colorDivider"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_story_right"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/item_comments_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/colorAccent"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingEnd="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_story_right"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/item_points"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/list_item_article_num_comments_text_size"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginEnd="4dp"
                    android:paddingTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/item_points_imageview"
                    app:layout_constraintBottom_toTopOf="@id/item_num_comments"
                    tools:text="120"/>

                <ImageView
                    android:id="@+id/item_points_imageview"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_thumb_up_24dp"
                    android:tint="@color/colorPrimaryDark"
                    android:contentDescription="@string/fragment_home_articles_list_item_points_description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/item_points"
                    app:layout_constraintBottom_toTopOf="@id/item_comments_imageview"/>

                <TextView
                    android:id="@+id/item_num_comments"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/list_item_article_num_comments_text_size"
                    android:textStyle="normal"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginEnd="4dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintEnd_toStartOf="@id/item_comments_imageview"
                    app:layout_constraintTop_toBottomOf="@id/item_points"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="125"/>

                <ImageView
                    android:id="@+id/item_comments_imageview"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_comment_24dp"
                    android:tint="@color/colorPrimaryDark"
                    android:contentDescription="@string/fragment_home_articles_list_item_comments_description"
                    app:layout_constraintTop_toBottomOf="@id/item_points_imageview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/item_num_comments"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_story_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.80" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/item_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="4dp"
        android:autoLink="web"
        android:visibility="invisible"
        style="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/item_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Ask HN: This is the text"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/item_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_card"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_comments_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/comments_list_item" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/item_nocomments_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/item_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_chat_bubble_outline_24dp"
            android:tint="@color/colorDivider"
            android:contentDescription="@string/fragment_story_imageview_nocomments_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fragment_story_nocomments_text"
            style="@style/NoCommentsTextAppearance"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>