<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:padding="4dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="8dp"
    style="@style/BaseAppCardView">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/article_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/list_item_article_title_text_size"
            android:textAlignment="textStart"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintBottom_toTopOf="@id/article_url"
            tools:text="Show HN: This is the title with two lines of text"/>

        <TextView
            android:id="@+id/article_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textStyle="italic"
            android:textSize="@dimen/list_item_article_url_text_size"
            android:maxLines="1"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/article_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintBottom_toTopOf="@id/article_user"
            tools:text="http://www.google.com"/>

        <TextView
            android:id="@+id/article_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="@dimen/list_item_article_user_text_size"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottomOf="@id/article_url"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/article_job_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="username"/>
        
        <ImageView
            android:id="@+id/article_job_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/ic_work_24dp"
            android:tint="@color/colorDivider"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/article_url"
            app:layout_constraintStart_toEndOf="@id/article_user"
            app:layout_constraintEnd_toStartOf="@id/article_time"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="visible"
            android:contentDescription="@string/fragment_job_icon_description" />

        <TextView
            android:id="@+id/article_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_item_article_user_text_size"
            android:textAlignment="textEnd"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottomOf="@id/article_url"
            app:layout_constraintStart_toEndOf="@id/article_job_icon"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="1 d"/>

        <View
            android:id="@+id/article_divider"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="@color/colorDivider"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/article_comments_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingEnd="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_right"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/article_points"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="@dimen/list_item_article_num_comments_text_size"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginEnd="4dp"
                android:paddingTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/article_points_imageview"
                app:layout_constraintBottom_toTopOf="@id/article_num_comments"
                tools:text="120"/>

            <ImageView
                android:id="@+id/article_points_imageview"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_thumb_up_24dp"
                android:tint="@color/colorPrimaryDark"
                android:contentDescription="@string/fragment_home_articles_list_item_points_description"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/article_points"
                app:layout_constraintBottom_toTopOf="@id/article_comments_imageview"/>

            <TextView
                android:id="@+id/article_num_comments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="@dimen/list_item_article_num_comments_text_size"
                android:textStyle="normal"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginEnd="4dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toStartOf="@id/article_comments_imageview"
                app:layout_constraintTop_toBottomOf="@id/article_points"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="125"/>

            <ImageView
                android:id="@+id/article_comments_imageview"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_comment_24dp"
                android:tint="@color/colorPrimaryDark"
                android:contentDescription="@string/fragment_home_articles_list_item_comments_description"
                app:layout_constraintTop_toBottomOf="@id/article_points_imageview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/article_num_comments"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>